client/styles/presenter.module.css
.top_level {
    /* make this 100% the screen */
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: var(--c-background);
    color: var(--c-text);
}

.main_container {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    justify-content: flex-start;
}

.no_text_space {
    margin: 0;
}

.not_gray {
    color: gray;
}

.topfloat {
    flex-grow: 0;
}

.topfloat_containeR {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: space-between;
    width: 100%;
    /* add a bit of padding from the edge */
    padding-right: 10vw;
}

.white_text {
    color: white;
}

.top_bottom_margin {
    margin: 4px 0 4px 0;
}

.middle_container {
    margin: 30px 0 30px 0;
    flex-grow: 1;
}

.middle_small_text {
    font-weight: 515;
    margin: 0;
    color: gray;
    font-size: 40px;
}
.middle_large_text {
    font-weight: 600;
    margin: 0;
    font-size: 45px;
}

.bottom_screen {
    flex-grow: 3;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    margin: 80px 0 80px 0;
}

.bottom_text_container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    margin: 40px;
    flex-grow: 1;
}

.bottom_qr_container {
    margin: 40px;
}

.qrcode {
    padding: 20px;
    background-color: #ffffff;
}

.bottom_small_text {
    font-weight: 515;
    margin: 0;
    font-size: 45px;
    color: gray;
}

.bottom_large_text {
    font-weight: 600;
    margin: 0;
    font-size: 70px;
}

